--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -33,6 +33,9 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 # Future
 
+## New Plugins
+- `dig-now`: instantly completes dig designations (including smoothing and carving tracks)
+
 # 0.47.05-r2
 
 ## Fixes
